ci: improve workflows and refactor build process
- Add new PR verification workflow that runs verification and tests
- Improve publish workflow with descriptive step names and quote consistency
- Add base path parameter to build command for proper deployment
- Refactor build script to use npm lifecycle hooks (prebuild/postbuild)
  instead of chained commands for better organization

These changes enhance CI/CD maintainability and ensure proper PR validation
before merging to main.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build && mkdir -p dist/src && cp scripts/pwa-recovery.js dist/src/main.js",
+    "prebuild": "tsc -b",
+    "build": "vite build",
+    "postbuild": "mkdir -p dist/src && cp scripts/pwa-recovery.js dist/src/main.js",
     "lint": "eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
