--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build Pages
-        run: npm run build -- --base=/gremlinofa/
+        run: npm run build
+        env:
+          VITE_BASE_PATH: /gremlinofa/
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
