feat(storage-backend): add support for multiple CORS origins
**Changes:**

- Add support for comma-separated CORS origins in CORS_ORIGIN env var
- Parse CORS_ORIGIN into array of origins or wildcard (*)
- Update config to use `corsOrigins` with support for null (same-domain),
  '*' (allow all), or array of specific origins
- Enhance CORS middleware to validate requests against multiple origins
- Update documentation and examples to reflect multi-origin support
- Add storage-backend verification and test steps to CI workflow

**Why:**

Enables applications to accept requests from multiple trusted domains
(e.g., production and staging environments) without using the insecure
wildcard option, improving security and flexibility.

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -17,6 +17,10 @@ jobs:
         run: npm ci
       - name: Install remote storage dependencies
         run: cd storage-backend && npm ci
+      - name: Run verification storage-backend
+        run: cd storage-backend && npm run verify
+      - name: Run tests storage-backend
+        run: cd storage-backend && npm run test:silent
       - name: Run verification
         run: npm run verify
       - name: Run tests
