--- a/storage-backend/.env.example
+++ b/storage-backend/.env.example
@@ -1,7 +1,11 @@
 # Server port (default: 3001)
 PORT=3001
 
-# CORS origin (empty = same-domain only, * = allow all, or specific origin like https://example.com)
+# CORS origin (empty = same-domain only, * = allow all, single origin, or comma-separated list)
+# Examples:
+#   CORS_ORIGIN=https://example.com
+#   CORS_ORIGIN=https://app.example.com,https://staging.example.com
+#   CORS_ORIGIN=*
 CORS_ORIGIN=
 
 # SQLite database file path (default: ./data.db)
