--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.0",
+    "@jitl/quickjs-ng-wasmfile-release-sync": "^0.31.0",
     "@jitl/quickjs-singlefile-browser-release-sync": "^0.31.0",
     "@mlc-ai/web-llm": "^0.2.80",
-    "@sebastianwessel/quickjs": "^3.0.0",
     "dompurify": "^3.3.0",
     "highlight.js": "^11.11.1",
     "katex": "^0.16.27",
     "marked": "^17.0.0",
     "openai": "^6.9.0",
+    "quickjs-emscripten-core": "^0.31.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
@@ -63,7 +64,6 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
     "vite": "^7.2.2",
-    "vite-plugin-node-polyfills": "^0.24.0",
     "vite-plugin-pwa": "^1.1.0",
     "vitest": "^4.0.13",
     "workbox-window": "^7.4.0"
