feat: replace message metadata with flexible message format system
- Add three message format modes: user message / with metadata / use template
- Add Mustache library for template-based message formatting
- Store original user input in renderingContent as TextRenderBlock
- Separate API payload (content with metadata) from display (renderingContent)
- Add dump JSON action to user message bubble
- Update documentation to reflect new message format architecture

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "highlight.js": "^11.11.1",
     "katex": "^0.16.27",
     "marked": "^17.0.0",
+    "mustache": "^4.2.0",
     "openai": "^6.9.0",
     "quickjs-emscripten-core": "^0.31.0",
     "react": "^19.2.0",
@@ -46,6 +47,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/dompurify": "^3.0.5",
+    "@types/mustache": "^4.2.6",
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
