feat(vfs): Add general-purpose virtual filesystem service
Introduces VfsService as a reusable, versioned virtual filesystem that
replaces the memory-specific storage implementation. The memory tool
now uses VFS as its backend, enabling future tools to share the same
filesystem infrastructure.

VfsService (src/services/vfs/):
- Tree-structured storage with soft-delete and orphan tracking
- Per-file versioning with SVN-style version history
- Path utilities: normalization, parent/basename, segment handling
- File ops: create, read, update, delete (soft), restore, purge
- Dir ops: mkdir, rmdir (recursive), readdir
- Rename with orphan tracking for displaced soft-deleted files
- Text editing: str_replace (unique match), insert at line

VFS Manager UI:
- VfsManagerView: File browser at /project/:projectId/vfs/*
- VfsDirectoryTree: Expandable tree with file sizes
- VfsFileViewer/VfsFileEditor: View and edit with draft persistence
- VfsDiffViewer: Compare versions with LCS diff highlighting
- VfsFileModal: Mobile-responsive file operations

Migration:
- Auto-migrate old memories/memory_journals tables to VFS
- Journal replay preserves version history
- Idempotent (skips projects with existing VFS data)

Memory Tool:
- Refactored to use VfsService backend
- Removed memoryStorage.ts (memory-specific implementation)
- API unchanged (view, create, str_replace, insert, delete, rename)

Storage tables: vfs_meta, vfs_files, vfs_versions

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postbuild": "mkdir -p dist/src && cp scripts/pwa-recovery.js dist/src/main.js",
     "lint": "eslint .",
     "format": "prettier --write .",
+    "format:silent": "CI=true prettier --write . | grep -v '(unchanged)'",
     "format:check": "prettier --check .",
     "preview": "vite preview",
     "verify": "CI=true prettier --check . && tsc -b && eslint .",
