feat(vfs): add file operations and version management features
- Add download support for text files
- Add create functionality for empty files and directories
- Add upload with auto UTF-8/binary detection
- Add ZIP download for entire directories using fflate library
- Implement version dropping for files with >10 versions
- Update diff viewer to respect minStoredVersion boundary

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@jitl/quickjs-singlefile-browser-release-sync": "^0.31.0",
     "@mlc-ai/web-llm": "^0.2.80",
     "dompurify": "^3.3.0",
+    "fflate": "^0.8.2",
     "highlight.js": "^11.11.1",
     "katex": "^0.16.27",
     "marked": "^17.0.0",
