feat: add AWS Bedrock client support
Add BedrockClient for AWS Bedrock Converse API integration:
- New dependencies: @aws-sdk/client-bedrock and @aws-sdk/client-bedrock-runtime
- Streaming via ConverseStreamCommand with non-streaming fallback
- Content block types: Text, ToolUse, ToolResult, Reasoning, Citations, Image
- New stream mapper (bedrockStreamMapper.ts) and content accumulator
- Updated development documentation with Bedrock client details

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.0",
+    "@aws-sdk/client-bedrock": "^3.978.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.978.0",
     "@jitl/quickjs-ng-wasmfile-release-sync": "^0.31.0",
     "@jitl/quickjs-singlefile-browser-release-sync": "^0.31.0",
     "@mlc-ai/web-llm": "^0.2.80",
