feat(anthropic): add Bedrock support to AnthropicClient via @anthropic-ai/bedrock-sdk
- Add @anthropic-ai/bedrock-sdk dependency for Claude models on Bedrock
- Support shorthand (bedrock:us-east-2) and full URL endpoint formats
- Document endpoint detection, authentication, and model discovery

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test:silent": "CI=true vitest run --no-color --silent passed-only"
   },
   "dependencies": {
+    "@anthropic-ai/bedrock-sdk": "^0.26.2",
     "@anthropic-ai/sdk": "^0.71.0",
     "@aws-sdk/client-bedrock": "^3.978.0",
     "@aws-sdk/client-bedrock-runtime": "^3.978.0",
